<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nguemba Wörterbuch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright_2022_mekountchou_orock_alle_rechte_vorbehalten">Copyright © 2022 Mekountchou Orock. - Alle Rechte vorbehalten.</string>
    <string name="e_mail">E-Mail</string>
    <string name="passwort">Passwort</string>
    <string name="passwort_vergessen">Passwort vergessen ?</string>
    <string name="einlogen">Einlogen</string>
    <string name="oder">__________ Oder __________</string>
    <string name="neu_anmelden">Neu anmelden</string>
    <string name="sollten_sie_irgendwelche_anmerkungen_verbesserungsvorschl_ge_haben_geben_sie_bitte_die_in_das_unten_stehende_feld_ein">Sollten Sie irgendwelche Anmerkungen, Verbesserungsvorschläge haben, geben Sie bitte die in das unten stehende Feld ein.</string>
    <string name="ihr_kommentar">Ihr Kommentar..</string>
    <string name="kommentar_senden">Kommentar senden</string>
    <string name="vorbemerkung">Vorbemerkung</string>
    <string name="die_nutzung_unseres_angebots_impliziert_automatisch_dass_sie_sich_mit_unseren_im_folgenden_zusammengefassten_nutzungsbedingungen_einverstanden_erkl_ren">Die Nutzung unseres Angebots impliziert automatisch, dass Sie sich mit unseren im Folgenden zusammengefassten Nutzungsbedingungen einverstanden erklären</string>
    <string name="nutzung_von_nguemba_w_rterbuch">Nutzung von Nguemba Wörterbuch</string>
    <string name="die_private_und_gesch_ftliche_nutzung_der_dienste_ist_kostenlos_soweit_nicht_explizit_auf_anfallende_kosten_hingewiesen_wird_diese_kostenpflichtigen_inhalte_finden_sich_vor_allem_bei_den_lerninhalten_sprachkurse_es_ist_untersagt_die_dienste_entgeltlich_an_dritte_weiterzuleiten">Die private und geschäftliche Nutzung der Dienste ist kostenlos, soweit nicht explizit auf anfallende Kosten hingewiesen wird. Diese kostenpflichtigen Inhalte finden sich vor allem bei den Lerninhalten (Sprachkurse). Es ist untersagt, die Dienste entgeltlich an Dritte weiterzuleiten.</string>
    <string name="inhalte_von_nguemba_w_rterbuch">Inhalte von Nguemba Wörterbuch</string>
    <string name="haftung">Haftung</string>
    <string name="nguemba_w_rterbuch_bernimmt_keine_haftung_f_r_die_richtigkeit_der_angebotenen_bersetzungen_von_begriffen_begriffspaaren_redewendungen_etc">Nguemba Wörterbuch übernimmt keine Haftung für die Richtigkeit der angebotenen Übersetzungen von Begriffen, Begriffspaaren, Redewendungen etc.</string>
    <string name="inhalte_dritter">Inhalte Dritter</string>
    <string name="nguemba_w_rterbuch_distanziert_sich_von_allen_inhalten_s_mtlicher_auf_unserer_internetpr_senz_verlinkter_fremder_seiten_und_macht_sich_deren_inhalte_nicht_zu_eigen_diese_distanzierung_gilt_f_r_alle_auf_unserer_internetpr_senz_angezeigten_links_und_f_r_alle_inhalte_der_seiten_zu_denen_die_bei_uns_angemeldeten_banner_und_links_f_hren_bitte_melden_sie_links_von_denen_sie_der_auffassung_sind_dass_diese_rechtswidrige_inhalte_enthalten_an_das_nguemba_team">Nguemba Wörterbuch distanziert sich von allen Inhalten sämtlicher auf unserer Internetpräsenz verlinkter fremder Seiten und macht sich deren Inhalte nicht zu eigen. Diese Distanzierung gilt für alle auf unserer Internetpräsenz angezeigten Links und für alle Inhalte der Seiten, zu denen die bei uns angemeldeten Banner und Links führen. Bitte melden Sie Links, von denen sie der Auffassung sind, dass diese rechtswidrige Inhalte enthalten, an das NGUEMBA -Team.</string>
    <string name="orocksohlewis23_gmail_com">orocksohlewis23@gmail.com</string>
    <string name="schreiben_sie_uns">Schreiben Sie uns:</string>
    <string name="_49_17676854459">+49 17676854459</string>
    <string name="rufen_sie_uns_bitte_an">Rufen Sie uns bitte an:</string>
    <string name="deutsch">Deutsch</string>
    <string name="nguemba">Nguemba</string>
    <string name="change">.</string>
    <string name="suchverlauf">Suchverlauf</string>
    <string name="l_schen">Löschen</string>
    <string name="letzte_suchen">Letzte Suchen..</string>
    <string name="anmelden">Anmelden</string>
    <string name="grammatik">Grammatik</string>
    <string name="favoriten">Favoriten</string>
    <string name="kommentare">Kommentare</string>
    <string name="app_teilen">App teilen</string>
    <string name="app_bewerten">App bewerten</string>
    <string name="spenden">Spenden</string>
    <string name="hilfe">Hilfe</string>
    <string name="info">Info</string>
    <string name="nguemba_w_rterbuch">Nguemba Wörterbuch</string>
    <string name="suche2">suche2</string>
    <string name="home2">home2</string>
    <string name="stern2">stern2</string>
    <string name="forum2">forum2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="orock_soh_talla">Orock Soh Talla</string>
    <string name="ruf_uns_an">Ruf uns an:</string>
    <string name="schreib_uns">Schreib uns:</string>
    <string name="search">Suche..</string>
    <string name="suche">Suche</string>
    <string name="home">Home</string>
    <string name="favorit">Favorit</string>
    <string name="forume">Forum</string>
    <string name="vorbemerkung1">Vorbemerkung</string>
    <string name="die_nutzung_unseres_angebots_impliziert_automatisch_dass_sie_sich_mit_unserer_im_folgenden_zusammengefassten_datenschutzerkl_rung_einverstanden_erkl_ren">Die Nutzung unseres Angebots impliziert automatisch, dass Sie sich mit unserer im Folgenden zusammengefassten Datenschutzerklärung einverstanden erklären.</string>
    <string name="erg_nzt_wird_die_datenschutzerkl_rung_durch_die_nutzungsbedingungen_in_diesen_ist_festgelegt_unter_welchen_bedingungen_sie_die_angebote_von_leo_nutzen_d_rfen">Ergänzt wird die Datenschutzerklärung durch die Nutzungsbedingungen. In diesen ist festgelegt, unter welchen Bedingungen Sie die Angebote von Nguemba Wörterbuch  nutzen dürfen.</string>
    <string name="alle_von_leo_gespeicherten_daten_werden_nicht_an_dritte_weitergegeben_oder_verkauft">Alle von Nguemba Wörterbuch gespeicherten Daten werden nicht an Dritte weitergegeben oder verkauft.</string>
    <string name="ihre_daten_werden_auf_servern_gespeichert_die_im_eigentum_und_besitz_der_leo_gmbh_sind_der_serverstandort_ist_deutschland">Ihre Daten werden auf Servern gespeichert, die im Eigentum und Besitz der Nguemba GmbH sind. Der Serverstandort ist Deutschland.</string>
    <string name="nguemba_gmbh">Nguemba GmbH</string>
    <string name="oberfeldstra_e_111_12683_berlin">Oberfeldstraße 111</string>
    <string name="_12683_berlin">12683 Berlin</string>
    <string name="f_r_die_inhalte_die_unter_der_domain_nguembaw_rterbuch_de_angeboten_werden_ist_die_nguemba_gmbh_verantwortlich">Für die Inhalte, die unter der Domain nguembaWörterbuch.de angeboten werden, ist die Nguemba GmbH verantwortlich.</string>
    <string name="neues_passwort_einngeben">Neues Passwort einngeben</string>
    <string name="passwort_wiederholene">Passwort wiederholen</string>
    <string name="speichern">Speichern</string>
    <string name="passwort_vergessen1">Passwort zurücksetzen</string>
    <string name="geben_sie_ihre_e_mailadresse_ein">Geben Sie Ihre E-mailadresse ein!</string>
    <string name="weiter"><![CDATA[Weiter >]]></string>
    <string name="zuruck"><![CDATA[< zurück]]></string>
    <string name="zol1">Kommen</string>
    <string name="zol2">Infinitiv (Tchedecne)</string>
    <string name="zol3">Partizip II (Tcheune)</string>
    <string name="zol4" />
    <string name="zol5">Ne sùh</string>
    <string name="zol6">Sùh</string>
    <string name="col1" />
    <string name="col2">Gkwètche-Dyâ</string>
    <string name="col3">progressive Gegenwart</string>
    <string name="row1">me(ich)</string>
    <string name="row2">sùh</string>
    <string name="row3">komme</string>
    <string name="row4">Oh(du)</string>
    <string name="row5">sùh</string>
    <string name="row6">kommst</string>
    <string name="row7">Î(er, sie, es)</string>
    <string name="row8">sùh</string>
    <string name="row9">kommt</string>
    <string name="row10">Peû(wir)</string>
    <string name="row11">sùh</string>
    <string name="row12">kommen</string>
    <string name="row13">Pû(ihr)</string>
    <string name="row14">sùh</string>
    <string name="row15">kommt</string>
    <string name="row16">Peh(sie)</string>
    <string name="row17">sùh</string>
    <string name="row18">kommen</string>
    <string name="dol1" />
    <string name="dol2">Ndeou tchya</string>
    <string name="dol3">Perfekt</string>
    <string name="dow1">me(ich)</string>
    <string name="dow2">ke sùh</string>
    <string name="dow3">bin gekommen</string>
    <string name="dow4">Oh(du)</string>
    <string name="dow5">ke sùh</string>
    <string name="dow6">bist gekommen</string>
    <string name="dow7">Î(er, sie, es)</string>
    <string name="dow8">ke sùh</string>
    <string name="dow9">ist gekommen</string>
    <string name="dow10">Peû(wir)</string>
    <string name="dow11">ke sùh</string>
    <string name="dow12">sind gekommen</string>
    <string name="dow13">Pû(ihr)</string>
    <string name="dow14">ke sùh</string>
    <string name="dow15">seid gekommen</string>
    <string name="dow16">Peh(sie)</string>
    <string name="dow17">ke sùh</string>
    <string name="dowi18">sind gekommen</string>
    <string name="aol1" />
    <string name="aol2">guo-te</string>
    <string name="aol3">Futur I</string>
    <string name="aow1">me(ich)</string>
    <string name="aow2">guo te sùh</string>
    <string name="aow3">werde kommen</string>
    <string name="aow4">Oh(du)</string>
    <string name="aow5">guo te sùh</string>
    <string name="aow6">wirst kommen</string>
    <string name="aow7">Î(er, sie, es)</string>
    <string name="aow8">guo te sùh</string>
    <string name="aow9">wird kommen</string>
    <string name="aow10">Peû(wir)</string>
    <string name="aow11">guo te sùh</string>
    <string name="aow12">werden kommen</string>
    <string name="aow13">Pû(ihr)</string>
    <string name="aow14">guo te sùh</string>
    <string name="aow15">werdet kommen</string>
    <string name="aow16">Peh(sie)</string>
    <string name="aow17">guo te sùh</string>
    <string name="aow18">werden kommen</string>
    <string name="bol1" />
    <string name="bol2">Ndeou-lu tchya</string>
    <string name="bol3">Präteritum</string>
    <string name="bow1">me(ich)</string>
    <string name="bow2">le sùh</string>
    <string name="bow3">kam</string>
    <string name="bow4">Oh(du)</string>
    <string name="bow5">le sùh</string>
    <string name="bow6">kamst</string>
    <string name="bow7">Î(er, sie, es)</string>
    <string name="bow8">le sùh</string>
    <string name="bow9">kam</string>
    <string name="bow10">Peû(wir)</string>
    <string name="bow11">le sùh</string>
    <string name="bow12">kamen</string>
    <string name="bow13">Pû(ihr)</string>
    <string name="bow14">le sùh</string>
    <string name="bow15">kamt</string>
    <string name="bow16">Peh(sie)</string>
    <string name="bow17">le sùh</string>
    <string name="bow18">kamen</string>
    <string name="eol1" />
    <string name="eol2">Nguea-ssak</string>
    <string name="eol3">Plusquamperfekt</string>
    <string name="eow1">me(ich)</string>
    <string name="eow2">dû sùh</string>
    <string name="eow3">war gekommen</string>
    <string name="eow4">Oh(du)</string>
    <string name="eow5">lû sùh</string>
    <string name="eow6">warst gekommen</string>
    <string name="eow7">Î(er, sie, es)</string>
    <string name="eow8">lû sùh</string>
    <string name="eow9">war gekommen</string>
    <string name="eow10">Peû(wir)</string>
    <string name="sprachniveau_ausw_hlen">Sprachniveau auswählen</string>
    <string name="c2">C2</string>
    <string name="c1">C1</string>
    <string name="b2">B2</string>
    <string name="b1">B1</string>
    <string name="a2">A2</string>
    <string name="a1">A1</string>
</resources>