<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeFragment">

            <TextView
                android:id="@+id/languageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/nguemba"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/languageText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="90dp"
                android:text="@string/deutsch"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/change"
                android:textSize="11sp"
                app:drawableEndCompat="@drawable/ic_change_language"
                app:layout_constraintEnd_toStartOf="@+id/languageText1"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="password"
                android:background="@drawable/kommentar"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="textCapWords"
                android:minHeight="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="27sp"
                app:drawableStartCompat="@drawable/ic_search_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languageText"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/suchverlauf"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <TextView
                android:id="@+id/löschVerlaufText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/l_schen"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grau"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/löschVerlaufText"/>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19">


                <TextView
                    android:id="@+id/suchVerlaufText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/letzte_suchen" />
            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
